--- a/style.css
+++ b/style.css
@@ -65,8 +65,9 @@ header {
 
 .main-content img {
     max-width: 100%;
-    height: auto;
     border-radius: 8px;
+    height: 200px;
+    width: 200px;
 }
 
 .main-content p {
@@ -74,7 +75,7 @@ header {
     line-height: 1.6;
 }
 
-/* Responsive Design */
+
 @media screen and (max-width: 768px) {
     .container {
         width: 95%;
