--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ header {
     border-radius: 8px;
 }
 
-.main-content img {
+.profile{
     border-radius: 8px;
     height: 200px;
     width: 200px;
