--- a/style.css
+++ b/style.css
@@ -4,11 +4,7 @@
     box-sizing: border-box;
 }
 
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-}
-
+/* Navigation Bar CSS*/
 nav {
     top: 0;
     left: 0;
